Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114446

wasm: native keyboard does not popup on iOS

XMLWordPrintable

    • WebAssembly
    • 65f09d4e1 (dev), 5bc7d8b2e (6.6), d91e3bc3f (6.5)

       

      This is a regression from earlier Qt versions.

      When trying textedit example, the native onscreen keyboard no longer pops up, on either iPhone or iPad.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lpotter Lorn Potter
            lpotter Lorn Potter
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes